--- a/README.adoc
+++ b/README.adoc
@@ -28,7 +28,9 @@ buildPlugin()
 ==== Optional arguments
 
 * `repo` (default: `null`  inherit from Multibranch) - custom Git repository to check out
-* `useAci` (default: `false`) - uses link:https://azure.microsoft.com/en-us/services/container-instances/[Azure Container Instances] for build instead of link:https://azure.microsoft.com/en-us/services/virtual-machines/[Azure Virtual Machines].
+* `useContainerAgent` (default: `false`) - uses a link:https://github.com/jenkins-infra/documentation/blob/main/ci.adoc#container-agents[Container agent] instead of a Virtual Machine: usually faster to start and generates less costs for the project
+** Please note that the implementation of "containers" can be changed over time
+* `useAci` (DEPRECATED - see `useContainerAgent`)
 * `failFast` (default: `true`) - instruct Maven tests to fail fast
 * `platforms` (default: `['linux', 'windows']`) - Labels matching platforms to
   execute the steps against in parallel
@@ -447,4 +449,4 @@ The design and some more details about the runATH and runPCT steps can be found 
 * (Open)JDK v8
 * Maven 3.6.x
 
-=== 
+===
