--- a/resources/io/jenkins/infra/docker/README.adoc
+++ b/resources/io/jenkins/infra/docker/README.adoc
@@ -47,10 +47,7 @@ grep 'Makefile' .gitignore || echo 'Makefile' | tee -a .gitignore
 
 * GNU Make 3.81+ command line
 
-* A https://github.com/moby/buildkit[Buildkit] compliant container tool
-** The command line top use is defined by the value of the environment variable `CONTAINER_BIN` which defauls to `img`
-** Our pipelines are using (Jessie Frazelle's) https://github.com/genuinetools/img[`genuinetools/img`] command line in v0.5.11, for security purposes (container in containers)
-** You can use https://docs.docker.com/get-docker/[Docker v20.10+] and its command line instead, by setting `CONTAINER_BIN` to `docker`
+* A https://github.com/moby/buildkit[Buildkit] compliant container tool like https://docs.docker.com/get-docker/[Docker v20.10+]
 
 * https://github.com/GoogleContainerTools/container-structure-test[Google's Container Structure Test] command line in v1.9.1+
 
@@ -62,19 +59,10 @@ grep 'Makefile' .gitignore || echo 'Makefile' | tee -a .gitignore
 +
 [source,bash]
 ---
-export CONTAINER_BIN=docker
 # ...
 make lint
 make build
 # ...
-----
-
-* OR prefix make commands with `CONTAINER_BIN=docker`:
-
-[source,bash]
----
-CONTAINER_BIN=docker make lint
-CONTAINER_BIN=docker make build
 ----
 
 == Workflow Steps
@@ -83,11 +71,10 @@ The following steps are available:
 
 * Linting with `make lint` to run a static analyzis to ensure good practises are applied the written code.
 
-* Build the image with `make build` to generate a local TAR archive in `image.tar`
-and store it in the local container tool's index under the name defined by `$IMAGE_NAME` (see <<Customization>>).
+* Build the image with `make build` and store it in the local container tool's index under the name defined by `$IMAGE_NAME` (see <<Customization>>).
 ** You might want to authenticated your container tool to the Docker Hub to avoid rate limitation for this step.
 
-* Run a test harness with the command `make test`, on the image stored in `image.tar`.
+* Run a test harness with the command `make test`.
 
 * Cleanup the image and its generated artefacts with `make clean`.
 
@@ -105,8 +92,6 @@ You can customize the different steps through the following environment variable
 * `IMAGE_NAME` (Defaults to `helloworld`): name of the image built on the local container tool.
 * `IMAGE_DEPLOY_NAME` (Defaults to the same value as `IMAGE_NAME`): final name of the image to be pushed to a remote Docker registry service (ideally after the test harness success to avoid dangling and untested artefacts).
 * `DOCKERFILE` (Defaults to `Dockerfile`): the relative path to the Dockerfile to be built under the current ($(PWD)) context directory.
-* `IMAGE_ARCHIVE` (Defaults to `image.tar`): the path to the TAR archive continaining the docker image.
-* `CONTAINER_BIN` (Defaults to `img`): The container's command line tool to use for building and deploying the image.
 * The "metadata" informations passed as both labels and arguments to the build:
 ** `GIT_COMMIT_REV` (Defaults to current commit's SHA): Git reference of the Docker image's code.
 ** `GIT_SCM_URL` (Defaults to the URL of the current git's remote named "origin"): URL of the git SCM repository's remote of the Docker image's code.
