feat: implement `artifact-caching-proxy` in `buildPlugin` (#23)

--- a/README.adoc
+++ b/README.adoc
@@ -40,6 +40,8 @@ buildPlugin()
   only available for Maven projects)
 * `configurations`: An alternative way to specify `platforms`, `jdkVersions` and `jenkinsVersions` (that can not be combined
   with any of them).
+* `artifactCachingProxyEnabled`: (default: `false`) - if set to `true`, artifacts will be downloaded using one of the artifact caching proxy depending on the agent provider (Azure, DigitalOcean or AWS).
+
 ** Those options will run the build for all combinations of their values. While that is desirable in
   many cases, `configurations` permit to provide a specific combinations of label and java/jenkins versions to use
 +
