--- a/README.adoc
+++ b/README.adoc
@@ -119,14 +119,14 @@ buildPluginWithGradle(/*...*/, configurations: [
 * `tests`: (default: `null`) - a map of parameters to run tests during the build
 ** `skip` - If `true`, skip all the tests.
 * `timeout`: (default: `60`) - the number of minutes for build timeout, cannot be bigger than 180, i.e. 3 hours.
+* `incrementals`: (default: `false`) - activates incremental versions publication. It requires Gradle JPI Plugin 0.49.0 and to not
+have set a version in `build.gradle` (having it in gradle.properties is fine), so it can be overridden.
 
 ==== Limitations
 
 Not all features of `buildPlugin()` for Maven are supported in the gradle flow.
 Examples of not supported features:
 
-* Deployment of incremental versions (link:https://github.com/jenkinsci/jep/tree/master/jep/305[JEP-305])
-* Publishing of static analysis and coverage reports (Checkstyle, SpotBugs, JaCoCo)
 * Configuring `jenkinsVersion` for the build flow (as standalone arguments or as `configurations`)
 * Usage of link:https://azure.microsoft.com/en-us/services/container-instances/[Azure Container Instances] as agents (only Maven agents are configured)
 
