--- a/README.adoc
+++ b/README.adoc
@@ -210,7 +210,7 @@ buildDockerImage_k8s('plugins-site-api')
 
 === HowTo test a pull request change
 
-By adding `@Library('pipeline-library@pull/<your-pr-number>/head') _` to the top of a Jenkinsfile from a repository builded on one of the *.ci.jenkins.io instances, you can test in situ your pipeline library pull request.
+By adding `@Library('pipeline-library@pull/<your-pr-number>/head') _` at the top of a Jenkinsfile from a repository builded on one of the *.ci.jenkins.io instances, you can test in situ your pipeline library pull request.
 
 A repository is dedicated for these kind of tests: https://github.com/jenkinsci/jenkins-infra-test-plugin/
 
