--- a/README.adoc
+++ b/README.adoc
@@ -208,7 +208,7 @@ buildDockerImage_k8s('plugins-site-api')
 * (Open)JDK v8
 * Maven 3.6.x
 
-=== HowTo test a pull request change
+=== Testing a pull request
 
 By adding `@Library('pipeline-library@pull/<your-pr-number>/head') _` at the top of a Jenkinsfile from a repository builded on one of the *.ci.jenkins.io instances, you can test in situ your pipeline library pull request.
 
